<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_12"
    android:background="@color/white"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".ui.activities.admin.Login">


   <LinearLayout
       android:gravity="center"
       android:layout_gravity="center"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">


       <TextView
           android:gravity="center"
           android:layout_gravity="center"
           android:id="@+id/textView"
           style="@style/textBoldForLogo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/quicksand_bold"
           android:text="@string/quoteLy"
           android:textSize="@dimen/sp_40"/>

       <TextView
           android:layout_marginStart="@dimen/dp_15"
           android:layout_marginLeft="@dimen/dp_15"
           android:gravity="center"
           android:layout_gravity="center"
           android:id="@+id/adminLabel"
           android:textColor="@android:color/black"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/quicksand_bold"
           android:text="@string/admin"
           android:textSize="@dimen/sp_40"/>


   </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:textColorHint="@android:color/black"
            app:hintTextColor="@android:color/black"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/email"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColorHint="@android:color/black"
                android:hint="@string/email_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:textColorHint="@android:color/black"
            app:hintTextColor="@android:color/black"
            android:layout_marginTop="@dimen/dp_10"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/password"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textColorHint="@android:color/black"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/userLogin"
            android:textSize="@dimen/sp_17"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/login"
            android:background="@drawable/button_rounded_rect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>



</LinearLayout>