<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:tag="layout/activity_category_screen_0">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            style="@style/textBold"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_22" />


    </RelativeLayout>


    <FrameLayout
        android:layout_below="@+id/header"
        android:layout_above="@+id/rl_btn_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/header"
            android:layout_above="@+id/adMobBanner"
            android:id="@+id/rvCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

        <LinearLayout
            android:visibility="gone"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/noDataUI"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                app:tint="@color/cardview_dark_background"
                android:src="@drawable/ic_broken_heart"
                android:layout_width="145dp"
                android:layout_height="145dp"/>

            <TextView
                android:layout_marginTop="@dimen/dp_40"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="18sp"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/noCats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/rl_btn_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_4"
        android:layout_marginRight="@dimen/dp_4"
        android:orientation="horizontal"
        android:weightSum="3">


        <androidx.cardview.widget.CardView
            android:id="@+id/addQuote"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/dp_16"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/dp_60">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/dp_12"
                android:fontFamily="@font/quicksand_bold"
                android:paddingBottom="@dimen/dp_12"
                android:text="@string/add_category"
                android:textSize="@dimen/dp_12"></TextView>


        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="@dimen/dp_4"
            android:layout_height="match_parent"></View>

        <androidx.cardview.widget.CardView
            android:id="@+id/add_trending_category"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/dp_16"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/dp_60">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/dp_12"
                android:fontFamily="@font/quicksand_bold"
                android:paddingBottom="@dimen/dp_12"
                android:text="@string/add_category_trending"
                android:textSize="@dimen/dp_12"></TextView>


        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="@dimen/dp_4"
            android:layout_height="match_parent"></View>

        <androidx.cardview.widget.CardView
            android:id="@+id/addImageQuote"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/dp_16"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/dp_60">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/dp_12"
                android:fontFamily="@font/quicksand_bold"
                android:paddingBottom="@dimen/dp_12"
                android:text="@string/addImage"
                android:textSize="@dimen/dp_12"></TextView>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>