<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/round_corners"
    android:elevation="@dimen/dp_8"
    android:orientation="vertical"
    tools:targetApi="lollipop">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <RelativeLayout
            android:id="@+id/soundOnOffLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:padding="@dimen/dp_5">

            <ImageView
                android:id="@+id/imgPath"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/ic_touch_sound" />

            <TextView
                style="@style/menuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imgPath"
                android:text="@string/strTapToSound"
                android:layout_toRightOf="@+id/imgPath" />

            <CheckBox
                android:id="@+id/checkTap"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_alignParentEnd="true"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorBackGroundShape" />

        <LinearLayout
            android:id="@+id/llInstagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_20"
            android:padding="@dimen/dp_5">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/ic_instagram" />

            <TextView
                style="@style/menuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strFollow_on_instagram" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_20"
            android:padding="@dimen/dp_5">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_awesome_facebook"
                app:tint="@android:color/holo_blue_dark" />

            <TextView
                style="@style/menuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strLikesOnFacebook" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/colorBackGroundShape" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <LinearLayout
            android:id="@+id/llRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:padding="@dimen/dp_5">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_awesome_star" />

            <TextView
                style="@style/menuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strRate" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_20"
            android:padding="@dimen/dp_5">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_ionic_ios_share_alt" />

            <TextView
                style="@style/menuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strShareApp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/colorBackGroundShape" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <LinearLayout
            android:id="@+id/tvPrivacyLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:padding="@dimen/dp_5">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_privacy_24" />

            <TextView

                style="@style/menuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:text="Privacy Policy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:padding="@dimen/dp_5">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_awesome_mobile" />

            <TextView
                android:id="@+id/tvVersion"
                style="@style/menuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:text="@string/appVersion" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvAboutLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:padding="@dimen/dp_5">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_people_24" />

            <TextView

                style="@style/menuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:text="About Us" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
